--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+form{
+  width: 800px;
+  height: 500px;
+  background: linear-gradient(140deg, rgb(179, 34, 179), rgb(91, 46, 253));
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.548);
+}
+
+.App{
+  padding: 10px;
+  margin-top: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1{
+  font-size: 50px;
+  text-align: center;
+  color: white;
+  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.548);
+}
+
+input{
+  margin: 20px 0;
+  width: 50%;
+  height: 40px;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.548);
+}
+
+input:nth-child(n){
+  padding-left: 10px;
+}
+
+button{
+  width: 50%;
+  height: 40px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.548);
+  font-size: 20px;
+  margin: 20px 0;
+}
+
+button:hover{
+
 }
